# swap-pallet

./: Cargo.toml
pallets/pallet-erc20/: Cargo.toml
pallets/pallet-erc20/src/: lib.rs
pallets/pallet-swap/: Cargo.toml
pallets/pallet-swap/src/: lib.rs
pallets/swap/: Cargo.toml
pallets/swap/src/: lib.rs  mock.rs
